Added test Signin, connection to database and cleaned up server.js
Co-authored-by: Jesse Kaptein

--- a/view/test.ejs
+++ b/view/test.ejs
@@ -7,6 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Signup</h1>
+    <form action="/new-user" method="POST">
+        <label for="">Username</label>
+        <input type="text" name="username" required>
+
+        <label for="">Password</label>
+        <input type="password" name="password" required>
+        
+        <input type="submit" value="Sign up">
+    </form>
 </body>
 </html>
