Added Login and double username check

--- a/view/login.ejs
+++ b/view/login.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Inloggen!</h1>
-    <form action="/" method="POST">
+    <form action="/login-test" method="POST">
         <label for="">Username</label>
         <input type="text" name="username" required>
 
@@ -17,7 +17,7 @@
         <label for="">Password</label>
         <input type="password" name="password" required>
     
-        <input type="submit" value="Sign up">
+        <input type="submit" value="Login">
     </form>
 </body>
 </html>
