main added to html

--- a/view/overview.ejs
+++ b/view/overview.ejs
@@ -9,6 +9,9 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
+        <main>
+            
+        </main>
         <script src="" async defer></script>
     </body>
 </html>
