--- a/view/overview.ejs
+++ b/view/overview.ejs
@@ -10,7 +10,10 @@
     </head>
     <body>
         <main>
-            
+            <div class="overview-film-container">
+                <div>searchbar</div>
+                <h2></h2><a href="/film/:id">see all</a>
+            </div>
         </main>
         <script src="" async defer></script>
     </body>
