filmdescriptiont html update

--- a/view/filmdescription.ejs
+++ b/view/filmdescription.ejs
@@ -8,7 +8,10 @@
 </head>
 <body>
     <!----HEADER------->
-    <header></header>
+    <header>
+        <button></button>
+        <button></button>
+    </header>
         
     
     
