--- a/view/overview.ejs
+++ b/view/overview.ejs
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,43 +11,45 @@
 </head>
 
 <body>
-    <section class="overview-film-hero">
-        <img src="https://via.placeholder.com/150?text=Image+1">
-        <div class="overlay-content">
-            <h2>LOREM</h2>
-            <h3>Ipsum dolor sit amet</h3>
-            <button>Watch now</button>
-        </div>
-    </section>
-
-    <main class="swiper-container film-slider-container">
-        <section class="film-slider-container-items">
-            <form class="search-form" action="/search" method="get">
-                <input type="text" name="q" placeholder="Search for films...">
-            </form>
-            <div class="inline-items">
-                <h2>Your picks</h2>
-                <a href="/film/:id">see all</a>
+    <div class="overview">
+        <section class="overview-film-hero">
+            <img src="https://via.placeholder.com/150?text=Image+1">
+            <div class="overlay-content">
+                <h2>LOREM</h2>
+                <h3>Ipsum dolor sit amet</h3>
+                <button>Watch now</button>
             </div>
         </section>
 
-        <section class="swiper-wrapper">
-            <% for(let i = 1; i <= 10; i++) { %>
-                <article class="swiper-slide movie-card">
-                    <img src="https://via.placeholder.com/150?text=Image+<%= i %>" alt="Image <%= i %>">
-                </article>
-            <% } %>
-        </section>
-    </main>
+        <main class="swiper-container film-slider-container">
+            <section class="film-slider-container-items">
+                <form class="search-form" action="/search" method="get">
+                    <input type="text" name="q" placeholder="Search for films...">
+                </form>
+                <div class="inline-items">
+                    <h2>Your picks</h2>
+                    <a href="/film/:id">see all</a>
+                </div>
+            </section>
 
-    <script src="" async defer></script>
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <script>
-        new Swiper('.swiper-container', {
-            slidesPerView: 'auto',
-            freeMode: false,
-            spaceBetween: 5,
-        });
-    </script>
+            <section class="swiper-wrapper">
+                <% for(let i = 1; i <= 10; i++) { %>
+                    <article class="swiper-slide movie-card">
+                        <img src="https://via.placeholder.com/150?text=Image+<%= i %>" alt="Image <%= i %>">
+                    </article>
+                <% } %>
+            </section>
+        </main>
+
+        <script src="" async defer></script>
+        <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+        <script>
+            new Swiper('.swiper-container', {
+                slidesPerView: 'auto',
+                freeMode: false,
+                spaceBetween: 5,
+            });
+        </script>
+    </div>
 </body>
 </html>
