--- a/view/shrek.ejs
+++ b/view/shrek.ejs
@@ -1,3 +1,5 @@
+
 <img src="<%= posterSrc %>" alt="Movie Poster">
+<img src="<%= backdropSrc %>" alt="Backdrop Image">
 <h1><%= title %></h1>
 <p><%= overview %></p>
