overview.ejs popular list added
Co-authored-by: Jesse Kaptein <N0kk0N@users.noreply.github.com>

--- a/view/overview.ejs
+++ b/view/overview.ejs
@@ -39,6 +39,7 @@
                     </article>
                 <% } %>
             </section>
+            <%= movies %>
         </main>
         <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
         <script>
