Improved API for frontend
Co-authored-by: Jesse Kaptein <N0kk0N@users.noreply.github.com>

--- a/view/overview.ejs
+++ b/view/overview.ejs
@@ -39,7 +39,20 @@
                     </article>
                 <% } %>
             </section>
-            <%= movies %>
+            <%= adultArray %>
+            <%= backdropPathArray %>
+            <%= genreIdsArray %>
+            <%= idArray %>
+            <%= originalLanguageArray %>
+            <%= originalTitleArray %>
+            <%= overviewArray %>
+            <%= popularityArray %>
+            <%= posterPathArray %>
+            <%= releaseDateArray %>
+            <%= titleArray %>
+            <%= videoArray %>
+            <%= voteAverageArray %>
+            <%= voteCountArray %>
         </main>
         <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
         <script>
