--- a/view/overview.ejs
+++ b/view/overview.ejs
@@ -21,7 +21,7 @@
             </div>
         </section>
 
-        <main class="swiper-container film-slider-container">
+        <main class="film-slider-container">
             <section class="film-slider-container-items">
                 <form class="search-form" action="/search" method="get">
                     <input type="text" name="q" placeholder="Search for films...">
@@ -31,22 +31,30 @@
                     <a href="/film/:id">see all</a>
                 </div>
             </section>
-            <section class="swiper-wrapper">
+            <section class="gsap-wrapper">
                 <% for(let i = 0; i < posterPathArray.length; i++) { %>
-                    <article class="swiper-slide movie-card">
+                    <article class="gsap-slide movie-card">
                         <img src="https://image.tmdb.org/t/p/w500<%= posterPathArray[i] %>" alt="Image <%= i + 1 %>">
                     </article>
                 <% } %>
             </section>
         </main>
-        <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
         <script>
-            new Swiper('.swiper-container', {
-                slidesPerView: 'auto',
-                freeMode: false,
-                spaceBetween: 5,
-            });
+            const slides = document.querySelectorAll('.gsap-slide');
+            let currentSlide = 0;
+            const slideWidth = slides[0].offsetWidth;
+            const totalSlides = slides.length;
+
+            function slideTo(index) {
+                gsap.to('.gsap-wrapper', {
+                    scrollLeft: slideWidth * index,
+                    duration: 1,
+                    ease: 'power1.inOut'
+                });
+                currentSlide = index;
+            }
         </script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     </div>
 </body>
 </html>
