--- a/view/login.ejs
+++ b/view/login.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Inloggen!</h1>
-    <form action="/login-test" method="POST">
+    <form action="/login-confirmation" method="POST">
         <label for="">Username</label>
         <input type="text" name="username" required>
 
