--- a/view/profile-settings.ejs
+++ b/view/profile-settings.ejs
@@ -3,7 +3,7 @@
     <body>
         
 
-<form action="/profile/settings" method="post" enctype="multipart/form-data">
+<form action="/profile/settingsnew" method="post" enctype="multipart/form-data">
     <input type="file" name="avatar" />
     <input type="submit" value="verstuur">
 </form>
