style van h2 veranderd

--- a/view/overview.ejs
+++ b/view/overview.ejs
@@ -13,10 +13,10 @@
 <body>
     <div class="overview">
         <section class="overview-film-hero">
-            <img src="https://via.placeholder.com/150?text=Image+1">
+            <img src="https://image.tmdb.org/t/p/w500<%= backdropPathArray[0] %>">
             <div class="overlay-content">
-                <h2>LOREM</h2>
-                <h3>Ipsum dolor sit amet</h3>
+                <h2><%= titleArray[0] %></h2>
+                <h3><%= genreIdsArray[0] %></h3>
                 <button>Watch now</button>
             </div>
         </section>
