--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -94,6 +94,7 @@ body{
 .overlay-content h2 {
     font-family: 'clash-bold', sans-serif;
     font-size: 1.875em;
+    filter: drop-shadow(0px 0px 100px #000000);
 }
 
 .overlay-content h3{
@@ -111,6 +112,28 @@ body{
     font-size: 0.875em;
     border-radius: 11px;
     text-transform: uppercase;
+}
+
+.film-slider-container {
+    flex-grow: 1;
+    padding-top: 30px;
+    padding-bottom: 50px;
+    background-color: white;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+    margin-top: -30px;
+    z-index: 100;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.gsap-wrapper::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.gsap-wrapper {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
 }
 
 .gsap-wrapper {
@@ -162,13 +185,13 @@ body{
 
 .inline-items h2 {
     font-family: 'clash-bold', sans-serif;
-    font-size: 1.3125em; /* 21px */
+    font-size: 1.3em;
     text-transform: uppercase;
 }
 
 .inline-items a {
     font-family: 'archivo-regular', sans-serif;
-    font-size: 1.0625em; /* 17px */
+    font-size: 1em;
     text-decoration: none;
     color: black;
 }
@@ -176,6 +199,6 @@ body{
 
 .movie-card img{
     height: 100%;
-    width: 200px;
+    width: 15em;
     object-fit: cover;
 }
