--- a/view/overview.ejs
+++ b/view/overview.ejs
@@ -34,7 +34,7 @@
 
             <section class="swiper-wrapper">
                 <% for(let i = 1; i <= 10; i++) { %>
-                    <article class="swiper-slide movie-card">
+                    <article class="swiper-slide overview-swiper-slide movie-card">
                         <img src="https://via.placeholder.com/150?text=Image+<%= i %>" alt="Image <%= i %>">
                     </article>
                 <% } %>
