--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -59,7 +59,7 @@ body{
 .overview-film-hero {
     flex-shrink: 0;
     width: 100%;
-    height: 40vh;
+    height: 48vh;
     background-color: blue;
     position: relative;
 }
@@ -93,21 +93,24 @@ body{
 
 .overlay-content h2 {
     font-family: 'clash-bold', sans-serif;
+    padding-top: 1em;
     font-size: 2.5em;
-    line-height: 1.2em;
+    line-height: 1em;
     text-shadow: 0px 0px 19px rgba(0, 0, 0, 1);
+    margin-bottom: 0;
 }
 
 .overlay-content h3{
     font-family: 'archivo-light', sans-serif;
     font-size: 0.9375em;
+    margin-top: 0;
 }
 
 .overlay-content button{
     border: none;
     background-color: #FF673E;
     width: 145px;
-    height: 50px;
+    height: 2.5em;
     font-family: 'clash-bold', sans-serif;
     color: white;
     font-size: 0.875em;
@@ -118,7 +121,7 @@ body{
 .film-slider-container {
     flex-grow: 1;
     padding-top: 30px;
-    background-color: white;
+    background-color: red;
     border-top-left-radius: 30px;
     border-top-right-radius: 30px;
     margin-top: -30px;
@@ -199,6 +202,6 @@ body{
 
 .movie-card img{
     height: 100%;
-    width: 15em;
+    width: 9em;
     object-fit: cover;
 }
