fixed link view all

--- a/view/overview.ejs
+++ b/view/overview.ejs
@@ -28,7 +28,7 @@
                 </form>
                 <div class="inline-items">
                     <h2>Your picks</h2>
-                    <a href="/film/:id">see all</a>
+                    <a href="/overview/all">see all</a>
                 </div>
             </section>
             <section class="gsap-wrapper">
