--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2,44 +2,45 @@
     font-family: archivo-regular;
     src: url(../fonts/Archivo-Regular.ttf);
   }
-
+ 
   @font-face {
     font-family: archivo-light;
     src: url(../fonts/Archivo-Light.ttf);
   }
-
+ 
   @font-face {
     font-family: archivo-bold;
     src: url(../fonts/Archivo-Bold.ttf);
   }
-
+ 
   @font-face {
     font-family: clash-regular;
     src: url(../fonts/ClashDisplay-Regular.ttf);
   }
-
+ 
   @font-face {
     font-family: clash-medium;
     src: url(../fonts/ClashDisplay-Medium.ttf);
   }
-
+ 
   @font-face {
     font-family: clash-light;
     src: url(../fonts/ClashDisplay-Light.ttf);
   }
-
+ 
   @font-face {
     font-family: clash-bold;
     src: url(../fonts/ClashDisplay-Bold.ttf);
   }
-
-
-
-
+ 
+ 
+ 
+ 
 body{
     padding: 0;
     margin: 0;
 }
+ 
 .overview {
     overflow-x: hidden;
     padding: 0;
@@ -48,13 +49,13 @@ body{
     display: flex;
     flex-direction: column;
 }
-
+ 
 .swiper-container {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
 }
-
+ 
 .overview-film-hero {
     flex-shrink: 0;
     width: 100%;
@@ -62,7 +63,7 @@ body{
     background-color: blue;
     position: relative;
 }
-
+ 
 .overview-film-hero::after {
     content: "";
     position: absolute;
@@ -73,13 +74,13 @@ body{
     background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(33,33,33,0.41222426470588236) 53%, rgba(120,120,120,0) 63%, rgba(255,255,255,0) 100%);
     z-index: 1;
 }
-
+ 
 .overview-film-hero img{
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
-
+ 
 .overlay-content {
     position: absolute;
     top: 50%;
@@ -89,10 +90,33 @@ body{
     text-align: center;
     z-index: 2;
 }
-
-.swiper-container {
+ 
+.overlay-content h2 {
+    font-family: 'clash-bold', sans-serif;
+    font-size: 1.875em;
+    text-shadow: 0px 0px 19px rgba(0, 0, 0, 1);
+}
+ 
+.overlay-content h3{
+    font-family: 'archivo-light', sans-serif;
+    font-size: 0.9375em;
+}
+ 
+.overlay-content button{
+    border: none;
+    background-color: #FF673E;
+    width: 145px;
+    height: 50px;
+    font-family: 'clash-bold', sans-serif;
+    color: white;
+    font-size: 0.875em;
+    border-radius: 11px;
+    text-transform: uppercase;
+}
+ 
+.film-slider-container {
     flex-grow: 1;
-    padding-top: 50px;
+    padding-top: 30px;
     padding-bottom: 50px;
     background-color: white;
     border-top-left-radius: 30px;
@@ -100,30 +124,41 @@ body{
     margin-top: -30px;
     z-index: 100;
 }
-
-.swiper-wrapper {
+ 
+/* Hide scrollbar for Chrome, Safari and Opera */
+.gsap-wrapper::-webkit-scrollbar {
+    display: none;
+}
+ 
+/* Hide scrollbar for IE, Edge and Firefox */
+.gsap-wrapper {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+ 
+.gsap-wrapper {
     display: flex;
-    flex-direction: row;
+    overflow-x: scroll;
+    padding-left: 20px;
+    box-sizing: border-box;
 }
-
-.overview-swiper-slide {
-    background-position: center;
-    background-size: cover;
-    width: 200px!important;
-    background-color: yellow;
+ 
+.gsap-slide {
+    flex: 0 0 auto;
+    margin-right: 10px;
 }
-
+ 
 .film-slider-container-items{
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-
-
+ 
+ 
 .film-slider-container-items form{
     width: 90%;
 }
-
+ 
 .search-form input[type="text"] {
     width: 100%;
     box-sizing: border-box;
@@ -136,24 +171,40 @@ body{
     background-position: 7px center;
     background-repeat: no-repeat;
 }
-
+ 
 .search-form input[type="text"]::placeholder {
     font-family: 'Archivo', sans-serif;
 }
-
+ 
 .inline-items {
     display: flex;
     justify-content: space-between;
-    width: 100%;
+    width: 90vw;
     align-items: center;
 }
+ 
+.inline-items h2 {
+    font-family: 'clash-bold', sans-serif;
+    font-size: 1.3em;
+    text-transform: uppercase;
+}
+ 
+.inline-items a {
+    font-family: 'archivo-regular', sans-serif;
+    font-size: 1em;
+    text-decoration: none;
+    color: black;
+}
+ 
+ 
 .movie-card img{
     height: 100%;
-    width: 200px;
+    width: 15em;
     object-fit: cover;
 }
 
 /* FILMDETAIL */
+
 /* Filmdetail - movie poster */
 .filmdetail-poster {
     height: 100vh;
@@ -181,17 +232,18 @@ body{
 .filmdetail-poster div button {
     margin: 0.5em;
     padding: 0.5em;
-    height: 3.5em;
-    width: 5em;
+    height: 2.5em;
+    width: 6em;
     border: none;
     border-radius: 10px;
     background-color: rgb(183, 166, 158);
     color: white;
+    text-transform: capitalize;
 }
 
 .filmdetail-poster div button:nth-of-type(2) {
-    width: 5em;
-    border-radius: 40em;
+    width: 2.5em;
+    border-radius: 50%;
 }
 
 .filmdetail-poster div h1 {
@@ -208,10 +260,20 @@ body{
     margin-bottom: 1em
 }
 
+.filmdetail-poster-gradient {
+    background: linear-gradient(to bottom, transparent, black);
+    position: absolute;
+    bottom: 0;
+    width: 100vw;
+    height: 20em;
+    z-index: -1;
+    opacity: 30%;
+}
+
 .filmdetail-favorite-icon {
     color: black;
     max-width: 100%;
-    height: 2em;
+    /* height: 2em; */
     z-index: 1;
 }
 
@@ -229,10 +291,16 @@ body{
     font-size:0.8em;
 }
 
-.filmdetail-description p:first-of-type{
-    margin-bottom: 3em;
-    font-family: archivo-bold;
-    font-size:0.8em;
+.filmdetail-description p:nth-of-type(2){
+    font-family: archivo-regular;
+    font-size: 0.9em;
+}
+
+.filmdetail-description p:nth-of-type(3){
+    font-family: archivo-light;
+    margin: 0;
+    font-size: 0.75em;
+    margin-bottom: 7em;
 }
 
 .filmdetail-watchnow {
@@ -245,13 +313,32 @@ body{
     font-family: archivo-bold
 }
 
+.filmdetail-aangebodenrecepten {
+    font-family: archivo-light;
+    margin-left: 1em;
+}
 /* Recipe */
+.filmdetail-recipe {
+    margin-left: 1em;
+    margin-right: 1em;
+}
+
 .filmdetail-recipe h2{
     margin: 0;
-    margin-bottom: 2em;
+    margin-bottom: 1em;
+    font-family: clash-bold;
+    text-transform: uppercase;
+    font-size: 2em;
 }
 
 /* ingredients */
+.filmdetail-ingredients-section h3 {
+    font-family: clash-medium;
+    font-size: 1em;
+    text-transform: uppercase;
+}
+
+
 .filmdetail-ingredients {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -261,13 +348,13 @@ body{
 
 .filmdetail-ingredients li  {
     text-transform:capitalize;
+    font-family: archivo-medium;
+    font-size: 0.9em;
 }
 
 
 /* Swiper function / instructions */
-
 .filmdetail-swiper {
-    background-color: rgb(183, 166, 158);
     color: white;
     text-align: center;
     justify-content: space-between;
@@ -277,19 +364,38 @@ body{
     align-items: center;
 }
 
+.filmdetail-wrapper {
+    text-align: center;
+    width: 70vw;
+    padding: 0;
+    margin: 0;
+}
+
 .filmdetail-slide {
-    width: 5em
+    width: 80vw;
+    justify-content: center;
+    background-color: rgb(183, 166, 158);
 } 
 
 .filmdetail-slide p {
-    width: 5em;
-    padding: 3em;
+    margin: 0;
+    margin-left: 1em;
+    margin-right: 1em;
     text-align: center;
-    align-items: center;
+    font-family: archivo-medium;
 } 
 
-.filmdetail-pagination {
-    color: white;
+.filmdetail-button-prev, .filmdetail-button-next {
+    background-color: white;
+    background-color: rgba(255, 255, 255, 0.5);
+    padding: 0.5em;
+    color: #000 !important;
+    border-radius: 1em;
+    border: none;
 }
 
 
+/* .filmdetail-button-next {
+    position: absolute;
+
+} */
