--- a/view/filmdescription.ejs
+++ b/view/filmdescription.ejs
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../static/css/styles.css">
-    <link rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 </head>
+
 <body>
     <!-- HEADER -->
     <header>
-        <section class="filmdetail-poster"> 
+        <section class="filmdetail-poster">
             <img class="filmdetail-poster-img" src="https://via.placeholder.com/150?text=Image+1">
 
             <div>
                 <button>go back</button>
-                <button><img class="filmdetail-favorite-icon" src="../static/images/favorite.svg" alt="svg icon"></button>
+                <button><img class="filmdetail-favorite-icon" src="../static/images/favorite.svg"
+                        alt="svg icon"></button>
             </div>
             <div>
                 <h1>dune</h1>
                 <p>american movie</p>
             </div>
+            <div class="filmdetail-poster-gradient"></div>
         </section>
     </header>
     <!----MAIN----->
@@ -38,14 +41,14 @@
         </section>
 
         <!-- recipe -->
-        <p>aangeboden recepten</p>
+        <p class="filmdetail-aangebodenrecepten">aangeboden recepten</p>
         <article class="filmdetail-recipe">
-     
+
             <h2>american burger</h2>
 
 
-                   <!-- ingrediënts -->
-            <section class="ingredienten">
+            <!-- ingrediënts -->
+            <section class="filmdetail-ingredients-section">
                 <h3>ingrediënts</h3>
                 <ul class="filmdetail-ingredients">
                     <li>salad</li>
@@ -60,54 +63,30 @@
                     <li>mixed dried herbs</li>
                 </ul>
             </section>
-                <!-- instructions -->
-            <!-- <section class="swiper">
-           
-                <button class="swiper-button-prev"></button>
-                <button class="swiper-button-next"></button>
-
-                <ul class="swiper-wrapper">
-                    <li class="swiper-slide">
-                        <p>heat the olive oil in a frying pan, add the onion and cook for 5minutes.</p>
+            <!-- instructions -->
+            <section class="swiper filmdetail-swiper">
+                <ul class="swiper-wrapper filmdetail-wrapper">
+                    <li class="swiper-slide filmdetail-slide">
+                        <p>Heat the olive oil in a frying pan, add the onion and cook for 5minutes.
+                        </p>
                     </li>
-
-                    <li class="swiper-slide">
-                        <p>in a bowl, combine the beef with the herbs and the egg.
+                    <li class="swiper-slide filmdetail-slide">
+                        <p>In a bowl, combine the beef with the herbs and the egg.
                             Season, add the onions and mix well.</p>
                     </li>
-
-                    <li class="swiper-slide">
-                        <p>cook the burger on a preheated pan for 5-6 minutes on each side.</p>
+                    <li class="swiper-slide filmdetail-slide">
+                        <p>Cook the burger on a preheated pan for 5-6 minutes on each side.</p>
                     </li>
-
-                    <li class="swiper-slide">
-                        <p>meanwhile, lightly toast the cut-side of the buns on the hot pan.</p>
+                    <li class="swiper-slide filmdetail-slide">
+                        <p>Meanwhile, lightly toast the cut-side of the buns on the hot pan.</p>
                     </li>
                 </ul>
 
-                <p class="swiper-pagination"></p>
-            </section> -->
-
-
-           <div class="swiper filmdetail-swiper">
-               
-                <div class="swiper-wrapper filmdetail-swiper">
-                  <div class="swiper-slide filmdetail-swiper">
-                    <p>heat the olive oil in a frying pan, add the onion and cook for 5minutes.</p>
-                  </div>
-                  <div class="swiper-slide filmdetail-slide"><p>in a bowl, combine the beef with the herbs and the egg.
-                    Season, add the onions and mix well.</p></div>
-                  <div class="swiper-slide filmdetail-slide"><p>cook the burger on a preheated pan for 5-6 minutes on each side.</p></div>
-                  <div class="swiper-slide filmdetail-slide"><p>meanwhile, lightly toast the cut-side of the buns on the hot pan.</p></div>
-
-                </div>
-
                 <div class="swiper-pagination filmdetail-pagination"></div>
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-button-next"></div>
+                <button class="swiper-button-prev filmdetail-button-prev"></button>
+                <button class="swiper-button-next filmdetail-button-next"></button>
 
-              </div>
-
+            </section>
 
 
 
@@ -117,15 +96,16 @@
 
     </main>
 
-<!-- FOOTER -->
+    <!-- FOOTER -->
     <footer>
         <nav></nav>
     </footer>
-        
-  
-  
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script type="module" src="../static/js/filmdetail.js"></script>
 
 </body>
+
 </html>
