added dynamic title

--- a/view/filmdescription.ejs
+++ b/view/filmdescription.ejs
@@ -21,7 +21,7 @@
                         alt="svg icon"></button>
             </div>
             <div>
-                <h1>dune</h1>
+                <h1><%= title %></h1>
                 <p>american movie</p>
             </div>
             <div class="filmdetail-poster-gradient"></div>
