--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -310,6 +310,7 @@ body{
     border: none;
     border-radius: 25px;
     background-color: rgb(255, 103, 63);
+    box-shadow: 0px 1px 15px rgba(255, 103, 63, 1); /* Adjust values as needed */
     font-family: archivo-bold
 }
 
