--- a/view/filmdescription.ejs
+++ b/view/filmdescription.ejs
@@ -13,7 +13,7 @@
     <!-- HEADER -->
     <header>
         <section class="filmdetail-poster">
-            <img class="filmdetail-poster-img" src="https://via.placeholder.com/150?text=Image+1">
+            <img class="filmdetail-poster-img" src="https://image.tmdb.org/t/p/w500<%= imageURL %>">
 
             <div>
                 <button>go back</button>
